--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
     "@react-navigation/native-stack": "^7.9.1",
     "@react-navigation/stack": "^7.6.14",
     "@supabase/supabase-js": "^2.90.1",
-    "expo": "~54.0.31",
+    "expo": "~54.0.33",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "^15.0.8",
     "expo-camera": "~17.0.10",
-    "expo-clipboard": "~7.0.1",
-    "expo-constants": "~17.0.8",
-    "expo-contacts": "~14.0.1",
-    "expo-device": "~7.0.1",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-linking": "~7.0.5",
-    "expo-notifications": "~0.31.0",
+    "expo-clipboard": "~8.0.8",
+    "expo-constants": "~18.0.13",
+    "expo-contacts": "~15.0.11",
+    "expo-device": "~8.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.11",
     "expo-local-authentication": "~17.0.8",
+    "expo-notifications": "~0.32.16",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^4.2.1",
